[workspace]
members = ["packages/*"]
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
vexide = "0.7.0"
atum = { path = "packages/atum" }
uom = { version = "0.37.0", default-features = false, features = ["autoconvert", "f64", "si"] }
log = "0.4.27"
