[workspace]
members = ["packages/*"]
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
vexide = { version = "0.8.0", features = ["full", "default-sdk", "vex-sdk-mock"] }
atum = { path = "packages/atum" }
log = "0.4.28"

[profile.release]
opt-level = "z"
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "symbols"
